# http

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  to_uppercase.py
.github/workflows/: ci.yml
benches/: Cargo.toml  header_map.rs  header_name.rs  header_name2.rs  header_value.rs  uri.rs
benches/header_map/: basic.rs  mod.rs  vec_map.rs
benches/src/: header_name.rs  header_name2.rs  header_value.rs  method.rs
benches/src/header_map/: basic.rs
ci/: script.sh
debug_metadata/: README.md  http.natvis
examples/: headers.rs
fuzz/src/: fuzz_http.rs
src/: byte_str.rs  convert.rs  error.rs  extensions.rs  lib.rs  method.rs  request.rs  response.rs  status.rs  str.rs  uri.rs  version.rs
src/field/: map.rs  mod.rs  name.rs  value.rs
src/header/: fast_hash.rs  fnv.rs  map.rs  mod.rs  name.rs  value.rs
src/uri/: authority.rs  builder.rs  builder2.rs  mod.rs  path.rs  port.rs  scheme.rs  tests.rs  userinfo.rs
tests/: debugger_visualizer.rs  header_map.rs  header_map_fuzz.rs  match_patterns.rs  query_params.rs  status_code.rs
util/: Cargo.toml
util/src/: main.rs
