[package]
name = "http"
# When releasing to crates.io:
# - Update html_root_url in lib.rs.
# - Update CHANGELOG.md.
# - Create git tag
version = "0.2.8"
readme = "README.md"
documentation = "https://docs.rs/http"
repository = "https://github.com/hyperium/http"
license = "MIT OR Apache-2.0"
authors = [
  "Alex Crichton <alex@alexcrichton.com>",
  "Carl Lerche <me@carllerche.com>",
  "Sean McArthur <sean@seanmonstar.com>",
]
description = """
A set of types for representing HTTP requests and responses.
"""
keywords = ["http"]
categories = ["web-programming"]
edition = "2018"
# When updating this value, don't forget to also adjust the GitHub Actions config.
rust-version = "1.49.0"

[dependencies]
bytes = "1"
fnv = "1.0.5"
itoa = "1"

[dev-dependencies]
indexmap = "1.0"
quickcheck = "0.9.0"
rand = "0.7.0"
seahash = "3.0.5"
serde = "1.0"
serde_json = "1.0"
doc-comment = "0.3"
criterion = "0.3.2"

[[bench]]
name = "header_map"
path = "benches/header_map/mod.rs"

[[bench]]
name = "header_name"
path = "benches/header_name.rs"

[[bench]]
name = "header_name2"
path = "benches/header_name2.rs"
harness = false

[[bench]]
name = "header_value"
path = "benches/header_value.rs"

[[bench]]
name = "method"
path = "benches/method.rs"

[[bench]]
name = "uri"
path = "benches/uri.rs"
