[package]
name = "http"
# When releasing to crates.io:
# - Update html_root_url in lib.rs.
# - Update CHANGELOG.md.
# - Create git tag
version = "1.3.1"
readme = "README.md"
documentation = "https://docs.rs/http"
repository = "https://github.com/hyperium/http"
license = "MIT OR Apache-2.0"
authors = [
  "Alex Crichton <alex@alexcrichton.com>",
  "Carl Lerche <me@carllerche.com>",
  "Sean McArthur <sean@seanmonstar.com>",
]
description = """
A set of types for representing HTTP requests and responses.
"""
keywords = ["http"]
categories = ["web-programming"]
edition = "2018"
# When updating this value, don't forget to also adjust the GitHub Actions config.
rust-version = "1.49.0"

[workspace]
members = [
  ".",
]
exclude = [
  "fuzz",
  "benches"
]

[features]
default = ["std", "bytes/default", "fnv/default"]
std = ["bytes/std", "fnv/std"]
no-std = ["hashbrown", "ahash"]

[dependencies]
bytes = { version = "1", default-features = false }
fnv = { version = "1.0.5", default-features = false }
itoa = "1"
hashbrown = { version = "0.15.2", optional = true }
ahash = { version = "0.8.6", default-features = false, optional = true }

[dev-dependencies]
quickcheck = "1"
rand = "0.8.0"
serde = "1.0"
serde_json = "1.0"
doc-comment = "0.3"
